# SSP

./: .gitignore  README.md
SSP-3D-Waveshaper/: CMakeLists.txt
SSP-3D-Waveshaper/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  WaveshaperControlsComponent.cpp  WaveshaperControlsComponent.h  WaveshaperTables.h
SSP-3D-Waveshaper/build-from-saturate-copy/: juce_vst3_helper
SSP-3D-Waveshaper/packaging/: README.md
SSP-3D-Waveshaper/scripts/: build-macos-installer.sh  build-windows-installer.ps1
SSP-3OSC/: CMakeLists.txt
SSP-3OSC/Source/: ChorusModuleComponent.cpp  DelayModuleComponent.cpp  DistortionModuleComponent.cpp  DistortionModuleComponent.h  EQModuleComponent.h  EffectsRackComponent.cpp  EffectsRackComponent.h  EnvelopeSectionComponent.cpp  EnvelopeSectionComponent.h  FactoryPresetBank.cpp  FactoryPresetBank.h  FactoryPresetLoader.cpp  FactoryPresetLoader.h  FilterModuleComponent.h  FilterSectionComponent.cpp  FilterSectionComponent.h  FlangerModuleComponent.cpp  GateModuleComponent.h  HeaderSectionComponent.cpp  HeaderSectionComponent.h  LfoPanelComponent.cpp  LfoPanelComponent.h  MasterSectionComponent.cpp  MasterSectionComponent.h  ModMatrixComponent.cpp  ModMatrixComponent.h  ModSectionComponent.cpp  ModSectionComponent.h  ModulationConfig.h  ModulationKnob.cpp  ModulationKnob.h  NoiseSectionComponent.cpp  NoiseSectionComponent.h  OscillatorSectionComponent.cpp  OscillatorSectionComponent.h  OscillatorSettingsComponent.cpp  OscillatorSettingsComponent.h  PerformanceSectionComponent.cpp  PerformanceSectionComponent.h  PhaserModuleComponent.h  (+29 more)
SSP-3OSC/scripts/: build-windows-installer.ps1
SSP-Channel-Strip/: CHANNEL_STRIP_PROMPT.md  CMakeLists.txt
SSP-Channel-Strip/Source/: EqControlsComponent.cpp  EqControlsComponent.h  EqGraphComponent.cpp  EqGraphComponent.h  MusicNoteUtils.cpp  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  SSPVectorUI.cpp  SSPVectorUI.h
SSP-Clipper/: CMakeLists.txt
SSP-Clipper/Source/: ClipperControlsComponent.cpp  ClipperControlsComponent.h  ClipperPresetBrowserComponent.cpp  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
SSP-Clipper/packaging/: README.md
SSP-Clipper/scripts/: build-macos-installer.sh  build-windows-installer.ps1
SSP-EQ/: CMakeLists.txt
SSP-EQ/Source/: EQPresetLibrary.cpp  EQPresetLibrary.h  EqControlsComponent.cpp  EqControlsComponent.h  EqGraphComponent.cpp  EqGraphComponent.h  MusicNoteUtils.cpp  MusicNoteUtils.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  PresetBrowserComponent.cpp  PresetBrowserComponent.h
SSP-EQ/scripts/: build-macos-installer.sh  build-windows-installer.ps1
SSP-EQ3/: CMakeLists.txt
SSP-EQ3/Source/: EQ3ControlsComponent.cpp  EQ3ControlsComponent.h  EQ3GraphComponent.cpp  EQ3GraphComponent.h  EQ3VectorUI.cpp  EQ3VectorUI.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
SSP-Echo/: CMakeLists.txt
SSP-Echo/Source/: EchoControlsComponent.cpp  EchoControlsComponent.h  EchoPresetBrowserComponent.cpp  EchoPresetBrowserComponent.h  EchoPresetLibrary.cpp  EchoPresetLibrary.h  EchoVectorUI.cpp  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
SSP-Echo/packaging/: README.md
SSP-Echo/scripts/: build-macos-installer.sh  build-windows-installer.ps1
SSP-Hihat-God/: CMakeLists.txt
SSP-Hihat-God/Source/: HihatGodControlsComponent.cpp  HihatGodControlsComponent.h  HihatPresetBrowserComponent.cpp  HihatPresetBrowserComponent.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  SSPVectorUI.cpp  SSPVectorUI.h
SSP-Hihat-God/scripts/: build-macos-installer.sh  build-windows-installer.ps1
SSP-Hub/: index.html  (+5 more)
SSP-Hyper-Resonance/: CMakeLists.txt
SSP-Hyper-Resonance/Source/: HyperResonanceControlsComponent.cpp  HyperResonanceControlsComponent.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
SSP-Hyper-Resonance/build-hyper/: juce_vst3_helper
SSP-Hyper-Resonance/packaging/: README.md
SSP-Hyper-Resonance/scripts/: build-macos-installer.sh  build-windows-installer.ps1
SSP-Imager/: CMakeLists.txt
SSP-Imager/Source/: ImagerControlsComponent.cpp  ImagerControlsComponent.h  ImagerGraphComponent.cpp  ImagerGraphComponent.h  ImagerPresetLibrary.cpp  ImagerPresetLibrary.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  PresetBrowserComponent.cpp  PresetBrowserComponent.h  SSPVectorUI.cpp  SSPVectorUI.h
SSP-Limiter/: CMakeLists.txt
SSP-Limiter/Source/: ClipperControlsComponent.cpp  ClipperControlsComponent.h  ClipperPresetBrowserComponent.cpp  ClipperPresetBrowserComponent.h  ClipperVectorUI.cpp  ClipperVectorUI.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
SSP-Limiter/packaging/: README.md
SSP-Limiter/scripts/: build-macos-installer.sh  build-windows-installer.ps1
SSP-MIDI-Buddy/: CMakeLists.txt
SSP-MIDI-Buddy/Source/: MidiBuddyVectorUI.cpp  MidiBuddyVectorUI.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
SSP-Minimize/: CMakeLists.txt
SSP-Minimize/Source/: MinimizeControlsComponent.cpp  MinimizeControlsComponent.h  MinimizeResponseComponent.cpp  MinimizeResponseComponent.h  MinimizeUI.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
SSP-Minimize/scripts/: build-windows-installer.ps1
SSP-Mixer/: CMakeLists.txt
SSP-Mixer/Source/: MixerControlsComponent.cpp  MixerControlsComponent.h  MixerVectorUI.cpp  MixerVectorUI.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
SSP-Multichain/: CMakeLists.txt
SSP-Multichain/Source/: BandCrossoverEQComponent.cpp  BandCurveEditorComponent.cpp  BandCurveEditorComponent.h  ControlsSectionComponent.cpp  ControlsSectionComponent.h  CurveInterp.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  TriggerControlsComponent.cpp  (+1 more)
SSP-Reducer/: CMakeLists.txt
SSP-Resonator/: CMakeLists.txt
SSP-Shifter/: CMakeLists.txt
SSP-Transient-Splitter/: CMakeLists.txt
(+388 files in other folders)
